--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "private": true,
   "devDependencies": {
-    "@sap/grunt-sapui5-bestpractice-build": "1.3.64"
+    "@sap/grunt-sapui5-bestpractice-build": "1.3.64",
+    "@ui5/cli": "^1.13.1"
   }
 }
