--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "devDependencies": {
     "@sap/grunt-sapui5-bestpractice-build": "1.3.64",
-    "@ui5/cli": "^1.13.1"
+    "@ui5/cli": "^1.13.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-ui5": "^0.1.0"
   }
 }
