--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Setup Node.js for use with actions
+      uses: actions/setup-node@v1.1.0
+    - run: npm install
     - name: ESLint Action
       uses: hallee/eslint-action@1.0.1
     - name: abaplint Action
