--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,6 @@ jobs:
     - name: Setup Node.js for use with actions
       uses: actions/setup-node@v1.1.0
     - run: npm install
-    - name: ESLint Action
-      uses: hallee/eslint-action@1.0.1
+    - run: npx eslint webapp
     - name: abaplint Action
       uses: abaplint/actions-abaplint@0.2.1
