--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,11 @@ jobs:
       uses: actions/setup-node@v1.1.0
     - name: NPM Install
       run: npm ci
-    - name: eslint Action
-      run: npx eslint webapp
-    - name: abaplint Action
-      run: npx abaplint src
-      if: always()
+    - name: ESLint Action
+      uses: hallee/eslint-action@1.0.1
+      
+#     - name: eslint Action
+#       run: npx eslint webapp
+#     - name: abaplint Action
+#       run: npx abaplint src
+#       if: always()
