--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,5 +1,5 @@
 {
-	"_version": "1.8.0",
+	"_version": "1.7.0",
 	"start_url": "start.html",
 	"sap.app": {
 		"id": "com.mindset.appanalyzer",
@@ -16,7 +16,9 @@
 				"settings": {
 					"odataVersion": "2.0",
 					"localUri": "localService/appanalyzer/metadata.xml",
-					"annotations": ["AvgAppUsageToday"]
+					"annotations": [
+						"AvgAppUsageToday"
+					]
 				}
 			},
 			"AvgAppUsageToday": {
@@ -42,7 +44,9 @@
 			"tablet": true,
 			"phone": true
 		},
-		"supportedThemes": ["sap_belize"]
+		"supportedThemes": [
+			"sap_belize"
+		]
 	},
 	"sap.ui5": {
 		"dependencies": {
@@ -64,9 +68,11 @@
 			}
 		},
 		"resources": {
-			"css": [{
-				"uri": "css/style.css"
-			}]
+			"css": [
+				{
+					"uri": "css/style.css"
+				}
+			]
 		},
 		"models": {
 			"i18n": {
