--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -177,5 +177,9 @@
 				}
 			}
 		}
+	},
+	"sap.platform.abap": {
+		"uri": "/sap/bc/ui5_ui5/mindset/fiorimoni/webapp",
+		"_version": "1.1.0"
 	}
 }
