--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -50,21 +50,14 @@
 	},
 	"sap.ui5": {
 		"dependencies": {
-			"minUI5Version": "${sap.ui5.dist.version}",
+			"minUI5Version": "1.65.6",
 			"libs": {
 				"sap.ovp": {},
-				"sap.ui.core": {
-					"minVersion": ""
-				},
-				"sap.ui.layout": {
-					"minVersion": ""
-				},
-				"sap.ui.vbm": {
-					"minVersion": ""
-				},
-				"sap.viz": {
-					"minVersion": ""
-				}
+				"sap.ui.core": {},
+				"sap.ui.layout": {},
+				"sap.ui.vbm": {},
+				"sap.viz": {},
+				"sap.m": {}
 			}
 		},
 		"resources": {
