--- a/neo-app.json
+++ b/neo-app.json
@@ -16,8 +16,7 @@
         "type": "service",
         "name": "sapui5",
         "preferLocal": true,
-        "entryPath": "/resources",
-        "version": "1.52.9"
+        "entryPath": "/resources"
       },
       "description": "SAPUI5 Resources"
     },
@@ -26,8 +25,7 @@
       "target": {
         "type": "service",
         "name": "sapui5",
-        "entryPath": "/test-resources",
-        "version": "1.52.9"
+        "entryPath": "/test-resources"
       },
       "description": "SAPUI5 Test Resources"
     }
