--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -50,9 +50,11 @@
 	},
 	"sap.ui5": {
 		"dependencies": {
-			"minUI5Version": "1.65.6",
+			"minUI5Version": "1.52.15",
 			"libs": {
-				"sap.ovp": {},
+				"sap.ovp": {
+					"minVersion": "1.52.3"
+				},
 				"sap.ui.core": {},
 				"sap.ui.layout": {},
 				"sap.ui.vbm": {},
