--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -107,7 +107,7 @@
 				"settings": {
 					"title": "{{UserLoggedIn}}",
 					"entitySet": "FLPLogInSet",
-					"stopResizing": true
+					"stopResizing": false
 				}
 			},
 			"card01": {
@@ -115,7 +115,7 @@
 				"template": "com.mindset.appanalyzer.ext.Broswertype",
 				"settings": {
 					"title": "{{BrowserTypes}}",
-					"stopResizing": true
+					"stopResizing": false
 				}
 			},
 			"card02": {
@@ -123,7 +123,7 @@
 				"template": "com.mindset.appanalyzer.ext.DeviceType",
 				"settings": {
 					"title": "{{DeviceType}}",
-					"stopResizing": true
+					"stopResizing": false
 				}
 			},
 			"card03": {
@@ -131,7 +131,7 @@
 				"template": "com.mindset.appanalyzer.ext.AvgFioriLaunchTime",
 				"settings": {
 					"title": "{{AvgFioriAppLaunchTime}}",
-					"stopResizing": true
+					"stopResizing": false
 				}
 			},
 			"card04": {
@@ -146,7 +146,7 @@
 				"template": "com.mindset.appanalyzer.ext.TopUser",
 				"settings": {
 					"title": "{{TopUsers}}",
-					"stopResizing": true
+					"stopResizing": false
 				}
 			},
 			"card06": {
