--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -107,6 +107,7 @@
 				"settings": {
 					"title": "{{UserLoggedIn}}",
 					"entitySet": "FLPLogInSet",
+					"identificationAnnotationPath": "com.sap.vocabularies.UI.v1.Identification#userDetail1",
 					"stopResizing": false
 				}
 			},
