--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
   "description": "",
   "private": true,
   "devDependencies": {
-    "@sap/grunt-sapui5-bestpractice-build": "1.3.64",
-    "@ui5/cli": "^1.13.1",
+    "@ui5/cli": "1.7.0",
+    "@sap/ui5-builder-webide-extension": "1.0.9",
     "eslint": "^6.8.0",
     "eslint-plugin-ui5": "^0.1.0"
+  },
+  "scripts": {
+    "build": "ui5 build --include-task=generateManifestBundle generateCachebusterInfo"
+  },
+  "ui5": {
+    "dependencies": [
+      "@sap/ui5-builder-webide-extension"
+    ]
   }
 }
