--- a/appanalyzer/package.json
+++ b/appanalyzer/package.json
@@ -7,14 +7,20 @@
     "@sap/ui5-builder-webide-extension": "1.0.9",
     "@ui5/cli": "^2.0.2",
     "eslint": "^6.8.0",
-    "eslint-plugin-ui5": "^0.1.0"
+    "eslint-plugin-ui5": "^0.1.0",
+    "ui5-middleware-index": "^0.1.0",
+    "ui5-middleware-simpleproxy": "^0.2.1",
+    "ui5-task-nwabap-deployer": "^1.0.9"
   },
   "scripts": {
     "build": "ui5 build --include-task=generateManifestBundle generateCachebusterInfo"
   },
   "ui5": {
     "dependencies": [
-      "@sap/ui5-builder-webide-extension"
+      "@sap/ui5-builder-webide-extension",
+      "ui5-middleware-simpleproxy",
+      "ui5-middleware-index",
+      "ui5-task-nwabap-deployer"
     ]
   }
 }
