--- a/appanalyzer/ui5.yaml
+++ b/appanalyzer/ui5.yaml
@@ -64,7 +64,7 @@ builder:
           createTransport: true
           transportText: Mindset App Analyzer Transport
           transportUseUserMatch: true
-          calculateApplicationIndex: true      
+          calculateApplicationIndex: false      
 server:
   customMiddleware:
     - name: ui5-middleware-simpleproxy
