--- a/appanalyzer/ui5.yaml
+++ b/appanalyzer/ui5.yaml
@@ -64,15 +64,15 @@ builder:
           createTransport: true
           transportText: Mindset App Analyzer Transport
           transportUseUserMatch: true
-          calculateApplicationIndex: false      
+          calculateApplicationIndex: false #true    
 server:
   customMiddleware:
     - name: ui5-middleware-simpleproxy
       afterMiddleware: compression
       mountPath: /sap
-      configuration:
-        baseUri: "https://s4hana.mindsetconsulting.com:44301/sap"
-        strictSSL: false
+      # configuration:
+      #   baseUri: 
+      #   strictSSL: 
     - name: ui5-middleware-index
       afterMiddleware: compression
       configuration:
