Remove server configuraiton from ui5.yaml

--- a/appanalyzer/ui5.yaml
+++ b/appanalyzer/ui5.yaml
@@ -50,8 +50,8 @@ builder:
       configuration: 
         resources:
           pattern: "**/*.*"
-        connection:
-          server: https://s4hana.mindsetconsulting.com:44301  
+        # connection:
+        #   server: https://s4hana.mindsetconsulting.com:44301  
         # authentication:
         #   user: myUser
         #   password: myPassword
