--- a/.github/workflows/abaplint.yml
+++ b/.github/workflows/abaplint.yml
@@ -26,6 +26,6 @@ jobs:
 
     steps:
     - name: abaplint Action
-      uses: abaplint/actions-abaplint@0.2.1
+      uses: abaplint/actions-abaplint@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
