CLOSE #56 VoE Card (#75)
* initial card build

* attempt to use google charts

* added count number for avg

* more tweaks

* fixed binding issue

* initial VoE

* fixes for ID

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -171,6 +171,13 @@
 					"title": "{{ContactUs}}",
 					"stopResizing": false
 				}
+			},
+			"card08": {
+				"model": "fiorimoni",
+				"template": "com.mindset.appanalyzer.ext.Feedback",
+				"settings": {
+					"title": "{{VoE}}"
+				}
 			}
 		}
 	},
