--- a/appanalyzer/ui5.yaml
+++ b/appanalyzer/ui5.yaml
@@ -72,7 +72,7 @@ server:
       mountPath: /sap
       # configuration:
       #   baseUri: 
-      #   strictSSL: 
+      #   strictSSL: true
     - name: ui5-middleware-index
       afterMiddleware: compression
       configuration:
