--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -108,7 +108,7 @@
 					"title": "{{UserLoggedIn}}",
 					"entitySet": "FLPLogInSet",
 					"identificationAnnotationPath": "com.sap.vocabularies.UI.v1.Identification#userDetail1",
-					"stopResizing": false
+					"stopResizing": true
 				}
 			},
 			"card01": {
@@ -116,7 +116,7 @@
 				"template": "com.mindset.appanalyzer.ext.Broswertype",
 				"settings": {
 					"title": "{{BrowserTypes}}",
-					"stopResizing": false
+					"stopResizing": true
 				}
 			},
 			"card02": {
@@ -124,7 +124,7 @@
 				"template": "com.mindset.appanalyzer.ext.DeviceType",
 				"settings": {
 					"title": "{{DeviceType}}",
-					"stopResizing": false
+					"stopResizing": true
 				}
 			},
 			"card03": {
@@ -132,17 +132,25 @@
 				"template": "com.mindset.appanalyzer.ext.AvgFioriLaunchTime",
 				"settings": {
 					"title": "{{AvgFioriAppLaunchTime}}",
-					"stopResizing": false
+					"stopResizing": true
 				}
 			},
 			"card04": {
+				"model": "fiorimoni",
+				"template": "com.mindset.appanalyzer.ext.Feedback",
+				"settings": {
+					"title": "{{VoE}}",
+					"stopResizing": true
+				}
+			},
+			"card05": {
 				"model": "fiorimoni",
 				"template": "com.mindset.appanalyzer.ext.TopError",
 				"settings": {
 					"title": "{{Top5Errors}}"
 				}
 			},
-			"card05": {
+			"card06": {
 				"model": "fiorimoni",
 				"template": "com.mindset.appanalyzer.ext.UserPerApp",
 				"settings": {
@@ -153,30 +161,23 @@
 					}
 				}
 			},
-			"card06": {
+			"card07": {
 				"model": "fiorimoni",
 				"template": "com.mindset.appanalyzer.ext.Region",
 				"settings": {
 					"title": "{{Region}}",
 					"defaultSpan": {
-						"cols": 3,
+						"cols": 2,
 						"rows": 8
 					}
 				}
 			},
-			"card07": {
+			"card08": {
 				"model": "fiorimoni",
 				"template": "com.mindset.appanalyzer.ext.Contact",
 				"settings": {
 					"title": "{{ContactUs}}",
 					"stopResizing": false
-				}
-			},
-			"card08": {
-				"model": "fiorimoni",
-				"template": "com.mindset.appanalyzer.ext.Feedback",
-				"settings": {
-					"title": "{{VoE}}"
 				}
 			}
 		}
