--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ on:
   push:
       branches:
         - master
+        - multiple-ui5-apps
 
 jobs:
   build:
@@ -29,9 +30,10 @@ jobs:
     - name: Setup Node.js for use with actions
       uses: actions/setup-node@v1.1.0
     - name: NPM Install
-      run: npm ci 
+      run: npm ci --no-audit --prefer-offline
     - name: ESlint Runner Action
       uses: tinovyatkin/action-eslint@v1
       with:
         # Token for the repo. Can be passed in using {{ secrets.GITHUB_TOKEN }}
-        repo-token: ${{ secrets.GITHUB_TOKEN }} 
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        check-name: eslint
