--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -101,7 +101,7 @@
 	"sap.ovp": {
 		"globalFilterModel": "fiorimoni",
 		"globalFilterEntityType": "",
-		"containerLayout": "resizable",
+		"containerLayout": "fixed",
 		"enableLiveFilter": false,
 		"considerAnalyticalParameters": false,
 		"cards": {
